--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,8 +8,8 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #00163f;
-  --bg-color-transparent: #00163f80;
+  --bg-color: #00050e;
+  --bg-color-transparent: #6b6f7580;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
   --accent-color: #be7efe;
