--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,7 +8,7 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #2d043d;
+  --bg-color: #000000;
   --bg-color-transparent: #6b6f7580;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
