--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -55,10 +55,34 @@ header .container {
   align-items: left;
 }
 
+@media screen and (max-width: 575px) {
+  header .container {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .wallet-btn{
+    width: 70vw;
+  }
+  .logo-img{
+   height: 4rem !important;
+  }
+}
+
 .menu {
   display: flex;
   gap: 2rem;
   align-items: center;
+}
+
+@media only screen and (max-width: 970px) {
+  .menu{
+    display:none;
+  }
+}
+
+.logo{
+  width:'180px';
 }
 
 /* NOT CONNECTED */
@@ -125,8 +149,8 @@ header .container {
 }
 
 .wallet-btn {
-  border-radius: 5rem;
-  margin-left: 2rem;
+  border-radius: 2rem;
+  margin-left: .5rem;
   border-color: transparent;
 }
 
@@ -349,7 +373,6 @@ section {
   .wallet-btn {
     margin-left: 0;
     padding: 0.5rem 1rem;
-    max-width: 8rem;
   }
   .not-connected {
     background-color: var(--bg-color-transparent);
